--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "html-webpack-plugin": "^3.2.0",
-    "radium": "^0.25.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
@@ -34,6 +33,7 @@
     "jest": "^24.5.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-router-dom": "^4.4.0"
+    "react-router-dom": "^4.4.0",
+    "styled-components": "^4.1.3"
   }
 }
