--- a/package.json
+++ b/package.json
@@ -25,15 +25,20 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "html-webpack-plugin": "^3.2.0",
+    "normalize.css": "^8.0.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "css-loader": "^2.1.1",
     "jest": "^24.5.0",
+    "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.4.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "styled-components": "^4.1.3"
   }
 }
